--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- contact me -->
     <div class="contact-me">
-        <p>Let Me Get You A Beautiful Website</p>
+        <p>Let Me Get You A Beautiful Website nirmit</p>
         <a class="button-two" href="#">Hire Me</a>
     </div>
 
